--- a/Week01/gonFusion/index.html
+++ b/Week01/gonFusion/index.html
@@ -12,93 +12,95 @@
 
 <body>
 
-    <header>
-        <div>
-            <div>
-                <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+
+
+                <div class="col-12 col-sm-8">
                     <h1>Ristorante con Fusion 666</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div>
+                <div class="col col-sm">
                 </div>
-            </div>
+
+
+
+             </div>
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div>
-                <h2>Uthappizza</h2>
+    <main class="container">
+        <section class="row">
+            <header  class="col-sm-4 push-sm-8 col-md-3 push-md-9">
+                <h2>Our Lipsmacking Culinary Creations</h2>
+            </header>
+            <article class="col-sm pull-sm-4  col-md pull-md-3">
+                <h3>Uthappizza</h3>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-            </div>
-        </div>
+            </article>
+        </section>
 
-
-        <div>
-            <div>
-                <h3>This Month's Promotions</h3>
-            </div>
-            <div>
-                <h2>Weekend Grand Buffet</h2>
+        <section class="row">
+            <header class="col-sm-4 col-md-3">
+                <h2>This Month's Promotions</h2>
+            </header>
+            <article class="col-sm col-md">
+                <h3>Weekend Grand Buffet</h3>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div>
-        </div>
+            </article>
+        </section>
 
-        <div>
-            <div>
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div>
-                <h2>Alberto Somayya</h2>
+        <section class="row">
+            <header class="col-sm-4 col-md-3">
+                <h2>Meet our Culinary Specialists</h2>
+            </header>
+            <article class="col-sm col-md">
+                <h3>Alberto Somayya</h3>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-            </div>
-        </div>
-    </div>
+            </article>
+        </section>
+    </main>
 
-    <footer>
-        <div>
-            <div>             
+    <footer class="container" >
+        <div class="row">
+            <nav class="col-5 offset-1 col-sm-2">
+                <h5>Links</h5>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <address class="col-6 col-sm-5">
+                <h5>Our Address</h5>
+                <p>
+                  121, Clear Water Bay Road<br>
+                  Clear Water Bay, Kowloon<br>
+                  HONG KONG<br>
+                  Tel.: +852 1234 5678<br>
+                  Fax: +852 8765 4321<br>
+                  Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+               </p>
+            </address>
+            <div class="col col-sm-4">
                 <div>
-                    <h5>Links</h5>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+                    <a href="http://google.com/+">Google+</a>
+                    <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
+                    <a href="http://www.linkedin.com/in/">LinkedIn</a>
+                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://youtube.com/">YouTube</a>
+                    <a href="mailto:">Mail</a>
                 </div>
-                <div>
-                    <h5>Our Address</h5>
-                    <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              Tel.: +852 1234 5678<br>
-		              Fax: +852 8765 4321<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
-                </div>
-                <div>
-                    <div>
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
-                    </div>
-                </div>
+            </div>
+       </div>
+       <div class="row">
+            <div class="auto">
+                <p>© Copyright 2015 Ristorante Con Fusion</p>
+            </div>
            </div>
-           <div>             
-                <div>
-                    <p>© Copyright 2015 Ristorante Con Fusion</p>
-                </div>
-           </div>
-        </div>
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
