--- a/Week01/gonFusion/index.html
+++ b/Week01/gonFusion/index.html
@@ -8,40 +8,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link  rel="stylesheet"  href="main.css" />
 </head>
 
 <body>
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row">
+            <div class="row row-header">
 
-
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-8 offset-1 " >
                     <h1>Ristorante con Fusion 666</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
-                </div>
-
-
 
              </div>
         </div>
     </header>
 
     <main class="container">
-        <section class="row">
-            <header  class="col-sm-4 push-sm-8 col-md-3 push-md-9">
+        <section class="row row-content  align-items-center">
+            <header  class="col-sm-4  col-md-3 flex-last">
                 <h2>Our Lipsmacking Culinary Creations</h2>
             </header>
-            <article class="col-sm pull-sm-4  col-md pull-md-3">
+            <article class="col-sm col-md flex-first">
                 <h3>Uthappizza</h3>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
             </article>
         </section>
 
-        <section class="row">
+        <section class="row row-content align-items-center">
             <header class="col-sm-4 col-md-3">
                 <h2>This Month's Promotions</h2>
             </header>
@@ -51,7 +47,7 @@
             </article>
         </section>
 
-        <section class="row">
+        <section class="row row-content align-items-center">
             <header class="col-sm-4 col-md-3">
                 <h2>Meet our Culinary Specialists</h2>
             </header>
@@ -63,11 +59,11 @@
         </section>
     </main>
 
-    <footer class="container" >
+    <footer class="container footer"  >
         <div class="row">
             <nav class="col-5 offset-1 col-sm-2">
                 <h5>Links</h5>
-                <ul>
+                <ul class="list-unstyled">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Menu</a></li>
@@ -85,8 +81,8 @@
                   Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
                </p>
             </address>
-            <div class="col col-sm-4">
-                <div>
+            <div class="col col-sm-4 align-self-center">
+                <div style="text-align: center">
                     <a href="http://google.com/+">Google+</a>
                     <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                     <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -96,8 +92,8 @@
                 </div>
             </div>
        </div>
-       <div class="row">
-            <div class="auto">
+       <div class="row justify-content-center">
+            <div class="col-auto">
                 <p>© Copyright 2015 Ristorante Con Fusion</p>
             </div>
            </div>
